[gd_scene load_steps=2 format=3 uid="uid://bdrqgusgcic0h"]

[ext_resource type="Script" uid="uid://dsur5wxnxjih4" path="res://Hud/environment_menu.gd" id="1_5ggyv"]

[node name="EnvironmentMenu" type="Panel"]
offset_right = 200.0
offset_bottom = 580.0
script = ExtResource("1_5ggyv")

[node name="RealisticLightingButton" type="CheckButton" parent="."]
layout_mode = 0
offset_right = 44.0
offset_bottom = 24.0
text = "Realistic Lighting"

[node name="CloseEnvironmentMenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 520.0
offset_right = 175.0
offset_bottom = 580.0
text = "Close"

[node name="FogDensityLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 35.0
offset_right = 95.0
offset_bottom = 58.0
text = "Fog Density"

[node name="FogDensitySpin" type="SpinBox" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 30.0
offset_right = 186.562
offset_bottom = 61.0
step = 0.01
value = 0.1

[connection signal="toggled" from="RealisticLightingButton" to="." method="_on_realistic_lighting_button_toggled"]
[connection signal="pressed" from="CloseEnvironmentMenuButton" to="." method="_on_close_environment_menu_button_pressed"]
[connection signal="value_changed" from="FogDensitySpin" to="." method="_on_fog_density_spin_value_changed"]
